--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,13 @@
       "": "src/"
     }
   },
+  "autoload-dev": {
+      "psr-4":{
+        "": "tests/"
+      }
+  },
   "require-dev": {
-    "phpunit/phpunit": ">=9.5.11"
+    "phpunit/phpunit": ">=9.5.11",
+    "mockery/mockery": ">=1.4.4"
   }
 }
