--- a/.github/workflows/github-php-actions.yml
+++ b/.github/workflows/github-php-actions.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+      run: composer validate --dev --strict
 
     - name: Cache Composer packages
       id: composer-cache
@@ -27,7 +27,7 @@ jobs:
           ${{ runner.os }}-php-
 
     - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+      run: composer install --prefer-dist --no-progress --dev
 
     - name: Run test suite
-      run: composer run-script test
+      run: composer run-script --dev test
